examples/parser/match.an
main () =
    "before"
    match test "foo" "bar"
    | 2 3 -> "foo"

    | "bar" -> "bar"
    | "block" ->
        if true then 1 else 2

    | "last branch" ->
        match "nested"
        | "hi!" -> "yo"

    "after"

    match "empty"
    "done"

// args: -e ast --no-color
// expected exit status: 1
// expected stdout:
// main () =
//     "before"
//     match test "foo" "bar"
//     "after"
//     match "empty"
//     "done"


// expected stderr:
// examples/parser/match.an:4:5
// 3 |     match test "foo" "bar"
// 4 |     | 2 3 -> "foo"	// error: Expected an expression but found `|`
//   |     ^
// 
// examples/parser/match.an:6:5
// 6 |     | "bar" -> "bar"	// error: Expected an expression but found `|`
//   |     ^
// 7 |     | "block" ->
// 
// examples/parser/match.an:7:5
// 6 |     | "bar" -> "bar"
// 7 |     | "block" ->	// error: Expected an expression but found `|`
//   |     ^
// 8 |         if true then 1 else 2
// 
// examples/parser/match.an:10:5
// 10 |     | "last branch" ->	// error: Expected an expression but found `|`
//    |     ^
// 11 |         match "nested"
// 
// Found 4 errors and 0 warnings

